@@ -1,5 +1,7 @@
 Revision history for Games-Solitaire-Verify
 
+        - Add the script/tag-release.pl to tag a release in Subversion.
+
 0.0901  Thu Jun  2 21:24:24 IDT 2011
         - Now importing Dumper from Data::Dumper properly.
 
